Compiler/tests/good/Output/10_output.rs
// Single line comment
fn main(){
  print!(false);
  return;
}
