Compiler/tests/bad/Output/02_output.rs
// Single line comment
fn main(){

  print!();
  return;
}
